--- a/_data/students/SURFLOU.yml
+++ b/_data/students/SURFLOU.yml
@@ -1,6 +1,6 @@
 name: Piotr Konopka
 github: SURFLOU
-image: /SURFLOU/gci/blob/master/images/students/SURFLOU.png
+image: SURFLOU.png
 twitter: surflou666
 bio: Hello I'm SURFLOU, 15 yo student. I like c++ and algorithm and this is I'm mainly doing.
 lat: 52.237049
